Done some changes

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,6 +2,6 @@
   <ul *ngFor="let item of post">
     <li>id = {{ item.id }}</li>
     <li>title = {{ item.title }}</li>
-    <li>content = {{ item.context }}</li>
+    <li>content = {{ item.content }}</li>
   </ul>
 </div>
