--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -20,6 +20,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/posts">posts</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/users">users</a>
+        </li>
       </ul>
     </div>
   </div>
